--- a/webview/src/index.css
+++ b/webview/src/index.css
@@ -3,3 +3,15 @@
 * {
 	font-family: "Noto Sans JP", sans-serif;
 }
+
+header.container {
+	padding-top: 3rem;
+	padding-bottom: 3rem;
+	text-align: center;
+}
+
+.feature-icon {
+	font-size: 2.5rem;
+	margin-bottom: 1rem;
+	display: block;
+}
